tests/ui/ast_literal_from_comparison.stderr
error[E0506]: cannot assign to `comp` because it is borrowed
  --> $DIR/ast_literal_from_comparison.rs:9:5
   |
8  |     let lit = ast::Literal::from_comparison(ast::Sign::None, &comp);
   |                                                              ----- borrow of `comp` occurs here
9  |     comp = ast::Comparison::gt(term1, term2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `comp` occurs here
10 |     let _end = (lit,comp);
   |                 --- borrow later used here

For more information about this error, try `rustc --explain E0506`.
